--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,13 @@
                 android:value=".MainActivity" />
         </activity>
 
+        <!--ID service -->
+        <service android:name=".fcm.SquawkFirebaseInstanceIdService">
+            <intent-filter>
+                <action android:name="om.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
